# desk-talk

./: .env.licenses  .env.licenses.dist  .gitignore  Cargo.toml  Cargo.toml.test  DEBUG_TEST_GUIDE.md  DEPLOYMENT_GUIDE.md  INSTALLER_LOCATION.txt  INSTALLER_README.md  KEYGEN_FIX_INSTRUCTIONS.md  LICENSE  PHASE3_COMPLETE.md  PRODUCTION_SECURITY_CHECKLIST.md  PRODUCTION_STATUS.md  QUICK_START_GUIDE.md  README.md  RELEASE_NOTES_v0.5.0.md  SECURITY_FIX_README.md  USER_GUIDE.md  tauri.conf.json  test_keygen.rs
.github/workflows/: rust.yml
icons/: README.md
keygen_test/src/: main.rs
src/: app_state.rs  config.rs  easy_rdev_key.rs  license.rs  main.rs  main_cli.rs  main_gui.rs  realtime.rs  record.rs  tauri_commands.rs  transcribe.rs  transcription_engine.rs
