[package]
name = "desk-talk"
version = "0.1.3"
edition = "2021"
description = "A software that records when you press a button down, and types what you said when you release it"
license = "MIT"
repository = "https://github.com/sloganking/desk-talk"

[dependencies]
anyhow = "1.0.75"
async-openai = "0.19.0"
async-std = "1.12.0"
clap = { version = "4.4.6", features = ["derive"] }
clipboard = "0.5.0"                                                      # For text clipboard backup/restore and non-Win fallback
cpal = "0.15.2"
dotenvy = "0.15.7"
enigo = "0.1.3"                                                          # Using the version you compiled with
flume = "0.11.0"
hound = "3.5.1"
rdev = "0.5.3"
tempfile = "3.8.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5.0"
