[package]
name = "desk-talk"
version = "0.1.3"
edition = "2021"
description = "A software that records when you press a button down, and types what you said when you release it"
license = "MIT"
repository = "https://github.com/sloganking/desk-talk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.14.3"
async-std = "1.12.0"
clap = { version = "4.4.6", features = ["derive"] }
clipboard = "0.5.0"
cpal = "0.15.2"
dotenvy = "0.15.7"
enigo = "0.1.3"
flume = "0.11.0"
hound = "3.5.1"
rdev = "0.5.3"
tempfile = "3.8.0"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
mutter = "0.2.0"
directories = "6.0.0"
ureq = "2.9.6"
rodio = "0.17"
default-device-sink = "0.1"
